método update() implementado y probado en la documentación
