# storage/api-docs/api-docs.json
@@ -3230,6 +3230,97 @@
                         "description": "Error al obtener el usuario."
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Usuarios"
+                ],
+                "summary": "Actualizar un usuario por ID",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del usuario a actualizar",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "role_id",
+                                    "activo",
+                                    "telefono",
+                                    "direccion"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Marta Duglas",
+                                        "maxLength": 150,
+                                        "minLength": 8
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "martaduglas@ejemplo.com",
+                                        "maxLength": 255
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "12345678",
+                                        "minLength": 8
+                                    },
+                                    "role_id": {
+                                        "type": "integer",
+                                        "example": 2
+                                    },
+                                    "telefono": {
+                                        "type": "string",
+                                        "example": "+5493455124468",
+                                        "maxLength": 10,
+                                        "minLength": 7
+                                    },
+                                    "direccion": {
+                                        "type": "string",
+                                        "example": "SM de Oro 79",
+                                        "maxLength": 255,
+                                        "minLength": 5
+                                    },
+                                    "activo": {
+                                        "type": "boolean",
+                                        "example": true
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Usuario actualizado correctamente."
+                    },
+                    "404": {
+                        "description": "Usuario no encontrado."
+                    },
+                    "422": {
+                        "description": "Los datos proporcionados no son válidos."
+                    },
+                    "500": {
+                        "description": "Error al intentar actualizar un usuario."
+                    }
+                }
             }
         },
         "/api/user": {
